5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1635_2703.log
== TEST (2019-04-07 22:15:52) 
-- CODE:
num = int(input(" Digite um número "))
if (num>=18)
mensagem =  " Eleitor "
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- ERROR:
File "XXXX", line 2
    if (num>=18)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:01) 
-- CODE:
num = int(input(" Digite um número "))
if (num >= 18)
mensagem =  " Eleitor "
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- ERROR:
File "XXXX", line 2
    if (num >= 18)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:54) 
-- CODE:
num = int(input(" Digite um número "))
if (num >= 18):
mensagem =  " Eleitor "
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    mensagem =  " Eleitor "
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:17:29) 
-- CODE:
num = int(input(" Digite um número "))
if (num >= 18):
	mensagem = " eleitor "
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:17:42) 
-- CODE:
num = int(input(" Digite um número "))
if (num >= 18):
	mensagem = " eleitor "
	
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:17:48) 
-- CODE:
num = int(input(" Digite um numero "))
if (num >= 18):
	mensagem = " eleitor "
	
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:17:56) 
-- CODE:
num = int(input(" Digite um numero "))
if (num >= 18):
	mensagem = " eleitor "
	
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:18:02) 
-- CODE:
num = int(input(" Digite um numero "))
if (num >= 18):
	mensagem = " eleitor "
	
else:
	mensagem = " nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.187548
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
